Rewrite again using executors threadpool